# sem-v-os

./: .gitignore
lab4/: CMakeLists.txt
lab4/src/: exec.c  fork.c  fork.h  handler.c  main.c  mult.c  pipe.c  sort.c  wait.c
p2/: tmp.txt
